# conduit-transcripts

./: .dockerignore  .env.docker  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cli  Dockerfile.ingestion  Dockerfile.mcp  Dockerfile.transcribe  Dockerfile.web  LICENSE  MCP_SERVER.md  README.md  RESTRUCTURE_PLAN.md  STREAMLIT_UPDATE_PROMPT.md  alembic.ini  avn_service_start.sh  corrections.json  docker-compose.modular.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  docker-entrypoint.sh  generate_frontmatter.py  justfile  opencode.json  pyproject.toml  readme.md  requirements.txt  rewrite_rules.json  slugify.py  slugify_local.py  spelling.py  test_rss_feasibility.py  update_names.py
.beads/: issues.jsonl
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: run-typer.yml  upload_file.yaml
app/: README.md  main.py
app/api/: models.py  routes.py
app/mcp/: server.py
app/templates/: episode.html  episodes.html  index.html  layout.html
apps/: __init__.py
apps/mcp/: __init__.py  actions.py  main.py  models.py  server.py
apps/transcribe/: __init__.py  api.py  main.py  models.py
apps/web/: main.py  run.py
cli/: README.md  __init__.py  main.py
conduit_transcripts/: __init__.py  pyproject.toml
conduit_transcripts/chat/: rag.py
conduit_transcripts/config/: __init__.py
conduit_transcripts/database/: opensearch.py  postgres.py
conduit_transcripts/models/: __init__.py  ingestion.py  transcript.py
conduit_transcripts/search/: actions.py
conduit_transcripts/transcription/: __init__.py  audio.py  core.py  metadata.py
conduit_transcripts/utils/: __init__.py  cache.py  logging.py  text.py  tracker.py
infra/: README.md  init-db.sql
migrations/: env.py
migrations/versions/: 83518df56015_add_normalization_columns.py  ee79e9a2984f_add_podcast_table_and_fk.py
podcast_transcription/: __init__.py  pyproject.toml  worker.py
podcast_transcription/podcast_transcription_core/: __init__.py
src/: add_title_keyword_field.py  apply_rewrite_rules.py  count_episodes.py  download_audio_file.py  ingestion_api.py  mcp_server.py  os_index.py  os_ingest.py  pg_ingest.py  quick_upload.py  rss_feed.py  rss_parser.py  transcribe.py  transcriber.py  url_finder.py
tests/: __init__.py  test_chat.py  test_cli.py  test_delete.py  test_episode_cache.py  test_mcp_server.py  test_rss_feed.py  test_search_actions.py  test_search_ui.py  test_web.py
tools/: os_ingest.py  pg_ingest.py  quick_upload.py  transcribe.py  upload_file.py  url_finder.py
transcripts/: 0 Episode 0 - It’s the Show!.mp3.txt  0-episode-0-its-the-show-mp3.txt  1 Our Systems The Unicorn & Silk Sonic Methods.mp3.txt  1-our-systems-the-unicorn-silk-sonic-methods-mp3.txt  1-our-systems-the-unicorn-silk-sonic-methods.md  10 Through the Hurt with Scotty Jackson.mp3.txt  10-through-the-hurt-with-scotty-jackson-mp3.txt  101-systems-check-spring-2025.md  102-planning-doing-things-for-me-we.md  105-is-it-ok-to-not-plan-for-the-future.md  106-this-is-not-an-episode-but-we-re-sorry.md  107-bored-as-a-benefit.md  108-systems-check-summer-2025.md  109-thinking-about-things-differently.md  11 HUUUUUUUGE Opportunities For You.mp3.txt  11-huuuuuuuge-opportunities-for-you-mp3.txt  11-huuuuuuuge-opportunities-for-you.md  110-conquering-p-and-other-letters.md  111-human-how-you-doin.md  112-i-like-your-skillz.md  113-i-assure-you-i-know-who-i-am-with-tiff-arment.md  114-productivity-fast-and-slow.md  115-productivity-inside-systems-you-dont-control.md  116-end-of-the-year-celebration-planning.md  117-the-year-to-be-selfish.md  118-system-checks-2025.md  12 Con Doing It Live!.mp3.txt  12-con-doing-it-live-mp3.txt  12-con-doing-it-live.md  13 Happiness First, Productivity Second.mp3.txt  13-happiness-first-productivity-second-mp3.txt  13-happiness-first-productivity-second.md  14 Giving Ourselves the Appropriate Amount of Expectations.mp3.txt  14-giving-ourselves-the-appropriate-amount-of-expectations-mp3.txt  15 Jay Has Some Big Decisions .mp3.txt  15-jay-has-some-big-decisions-mp3.txt  15-jay-has-some-big-decisions.md  16 A Good Friend Tells You What You Already Knew.mp3.txt  16-a-good-friend-tells-you-what-you-already-knew-mp3.txt  17 Space, and Related Subjects, For Your Productivity.mp3.txt  (+170 more)
transcripts/conduit_podcast/: 10-through-the-hurt-with-scotty-jackson.md  100-it-s-episode-100.md  103-the-privilege-of-doing-this.md  104-checking-in-on-checking-out.md  14-giving-ourselves-the-appropriate-amount-of-expectations.md  16-a-good-friend-tells-you-what-you-already-knew.md  18-putting-external-factors-in-a-vice-grip.md  19-eating-the-devils-spaghetti-combating-imposter-syndrome.md  2-when-you-cant-even-or-odd.md  25-caring-to-care.md  27-these-are-the-spoons-you-have.md  29-systems-check-summer-2022.md  3-getting-away-now.md  31-salt-pepper-garlic-fall.md  34-debug-my-nervous-system.md  35-serious-unicorning-around.md  36-brain-bags.md  37-systems-check-fall-2022.md  39-self-care-isn-t-selfish.md  4-big-and-little-wind-downs.md  41-accountability-doing-it-right.md  42-we-asked-a-lot-of-questions.md  43-systems-check-chugga-chugga-to-do.md  44-taking-care-of-that-jar-in-the-preseason.md  46-feed-the-ducks.md  47-the-secret-soup-packing-sauce.md  48-long-projects-remove-the-concept-of-time.md  49-systems-check-spring-2023-unicorns-and-thundercats.md  5-sustained-progress-over-being-overwhelmed.md  52-notes-that-right-there-thats-a-good-thing.md  55-expectations-of-being-in-a-new-space.md  56-systems-check-summer-2023-sidetracked-with-doing-stuff.md  58-finding-your-rhythm.md  6-getting-back-into-the-swing-of-things.md  60-not-juggling-its-balancing.md  70-gimme-f-g-zen.md  (+18 more)
(+93 files in other folders)
