[project]
name = "conduit-transcripts"
version = "0.1.0"
description = "A podcast transcript management system for the Conduit Podcast with transcription, embedding, and RAG capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Jay Miller", email = "kjaymiller@gmail.com" }]

# Core dependencies
dependencies = [
  "httpx>=0.24.0",
  "python-multipart",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "sqlalchemy>=2.0.0",
  "pgvector>=0.1.0",
  "python-dotenv>=1.0.0",
  "psycopg>=3.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "arrow>=1.0.0",
  "python-frontmatter>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "langchain-huggingface>=0.0.1",
  "langchain-text-splitters>=0.0.1",
  "feedparser",
  "slugify",
  "alembic>=1.13.0",
  "sentence-transformers>=5.2.0",
]

# Optional ML dependencies
[project.optional-dependencies]
opensearch = ["opensearch-py>=2.0.0"]
mlx = ["mlx-whisper>=0.4.3"]
whisper = ["openai-whisper>=20230314"]

# Development dependencies
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0",
  "mlx-whisper>=0.4.3",       # For development on Apple Silicon
  "openai-whisper>=20230314",
]

[project.scripts]
conduit = "cli.main:app"
conduit-transcribe = "apps.transcribe.main:main"
conduit-mcp = "apps.mcp.main:main"

[project.urls]
Homepage = "https://github.com/kjaymiller/conduit-transcripts"
Repository = "https://github.com/kjaymiller/conduit-transcripts"
Issues = "https://github.com/kjaymiller/conduit-transcripts/issues"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
packages = ["conduit_transcripts", "apps", "cli"]

