[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conduit-transcripts"
version = "0.1.0"
description = "Conduit Transcripts API and CLI - FastAPI web app and CLI interface"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Jay Miller", email = "kjaymiller@gmail.com" }]

dependencies = [
  "conduit-transcripts-core @ file:///${PROJECT_ROOT}/conduit_transcripts",
  "click>=8.0.0",
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "jinja2>=3.1.0",
  "python-multipart",
]

[project.scripts]
conduit = "cli.main:cli"
conduit-server = "app.main:main"

[tool.setuptools.package-data]
"app" = ["**/*.py"]
"cli" = ["**/*.py"]

[project.urls]
Homepage = "https://github.com/kjaymiller/conduit-transcripts"
Repository = "https://github.com/kjaymiller/conduit-transcripts"
Issues = "https://github.com/kjaymiller/conduit-transcripts/issues"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
packages = ["app", "cli"]
