[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conduit-transcripts-core"
version = "0.1.0"
description = "Core library for Conduit Transcripts - transcription, embedding, and RAG capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Jay Miller", email = "kjaymiller@gmail.com" }]

dependencies = [
  "openai-whisper>=20241126",
  "httpx>=0.24.0",
  "python-multipart",
  "sqlalchemy>=2.0.0",
  "pgvector>=0.1.0",
  "python-dotenv>=1.0.0",
  "psycopg>=3.0.0",
  "arrow>=1.0.0",
  "python-frontmatter>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "langchain-huggingface>=0.0.1",
  "langchain-text-splitters>=0.0.1",
  "feedparser",
  "python-slugify>=8.0.0",
  "sentence-transformers>=5.2.0",
  "langchain-ollama>=1.0.1",
  "mcp>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/kjaymiller/conduit-transcripts"
Repository = "https://github.com/kjaymiller/conduit-transcripts"
Issues = "https://github.com/kjaymiller/conduit-transcripts/issues"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.setuptools]
packages = ["conduit_transcripts"]
